验证登录完成

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -277,16 +277,18 @@
         $(function () {
             $.ajax({
                 type: "post",
-                url: "LoginToJudge.do",
+                url: "LoginTo.do",
                 dataType: "json",
                 success: function (data) {
                     console.log(data)
                     if (data.code == 1) {
                         if (data.info == 1) {
-                            layer.msg("老师你好，登录成功")
+                           // layer.msg("老师你好，登录成功")
+                            alert("老师你好，登录成功")
                         }
                     } else {
-                        layer.msg("未登录")
+                       // layer.msg("未登录")
+                        alert("未登录")
                         window.location.href = "login.html"
                     }
                 }
