班级信息展示分页完成

--- a/src/main/webapp/gradeadd.html
+++ b/src/main/webapp/gradeadd.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="layui-container" style="margin-top: 50px;">
-		<form class="layui-form" action="grade/insertGrade.do" method="post" id="form1" onsubmit="return false">
+		<form class="layui-form" action="insertGrade.do" method="post" id="form1" onsubmit="return false">
 			<div class="layui-form-item">
 				<label class="layui-form-label">班级序号</label>
 				<div class="layui-input-block">
@@ -87,15 +87,19 @@
 		$("#submit1").click(function () {
 			$.ajax({
 				type:'post',
-				url:'grade/insertGrade.do',
+				url:'insertGrade.do'
+
+				,
 				data:$("#form1").serialize(),
 				dataType:'json',
 				success:function (data) {
 					if (data.code == 1) {
 						alert(data.info)
+						alert("班级增加成功")
 						window.location.href = "gradeadd.html"
 					} else {
 						alert(data.info)
+
 					}
 				}
 			})
