--- a/src/main/webapp/gradelist.html
+++ b/src/main/webapp/gradelist.html
@@ -158,7 +158,7 @@
 
 		function studentAndGrade() {
 			$.ajax({
-				url:'student/selectStuGrade.do',
+				url:'selectGrade.do',
 				type:'get',
 				dataType:'json',
 				success:function (data) {
@@ -193,7 +193,7 @@
 				//z找到table  id叫test的组件
 				elem: '#test'
 				,id:"transferTable"
-				,url:'grade/selectGradeAll.do'
+				,url:'selectGradeAll.do'
 				,totalRow: true
 				//这个很关键，就是解析 json数据库中数据的 一定要注意键值
 				,cols: [[
