--- a/src/main/webapp/gradelist.html
+++ b/src/main/webapp/gradelist.html
@@ -228,7 +228,7 @@
 					layer.confirm('真的删除行么' +data.id, function(index){
 						layui.$.ajax({
 							type:'get',
-							url:'grade/deleteGradeById.do?id=' + data.id,
+							url:'deleteGradeById.do?id=' + data.id,
 							dataType:'json',
 							success:function (data) {
 								if (data.code == 1) {
@@ -262,7 +262,7 @@
 			var id = $("#id").val()
 			$.ajax({
 				type: 'get',
-				url:'grade/updateGrade.do?id='+id,
+				url:'updateGrade.do?id='+id,
 				data:$("#form1").serialize(),
 				dataType: 'json',
 				success:function (date) {
