学科管理模块学科列表删除修改完成

--- a/src/main/webapp/courseupdate.html
+++ b/src/main/webapp/courseupdate.html
@@ -87,7 +87,7 @@
         $.ajax({
             type:"post",
             data:$('form').serialize(),
-            url:"course/courseupdate.do",
+            url:"courseupdate.do",
             success:function (res) {
                 console.log(res)
                 if(res.code==1){
