部门管理模块部门列表删除修改完成

--- a/src/main/webapp/departadd.html
+++ b/src/main/webapp/departadd.html
@@ -81,7 +81,8 @@
                url:"addDepart.do",
                success:function (res) {
                     if (res.code==1){
-                        layer.msg('成了')
+                        alert(res.info)
+                        window.location.href='departlist.html'
                     }else{
                         layer.msg(res.info)
                     }
